fixed underline color in dark mode and other minor adjustments

--- a/css/gallery.css
+++ b/css/gallery.css
@@ -65,7 +65,7 @@ body {
     left: 50%;
     width: 0;
     height: .5px;
-    background-color: var(--clr-white);
+    background-color: var(--clr-darkGrey);
     transition: 350ms ease;
 }
 .links ul li a:hover::before {
@@ -302,6 +302,9 @@ nav.active .hamburger-menu .bars::after {
     }
     .links ul li a {
         color: var(--clr-grey);
+    }
+    .links ul li a::before {
+        background-color: var(--clr-grey);
     }
     .bars::before,
     .bars::after {
