--- a/css/photographers.css
+++ b/css/photographers.css
@@ -55,7 +55,7 @@ body {
     left: 50%;
     width: 0;
     height: .5px;
-    background-color: var(--clr-white);
+    background-color: var(--clr-darkGrey);
     transition: 350ms ease;
 }
 .links ul li a:hover::before {
@@ -300,6 +300,9 @@ nav.active .hamburger-menu .bars::after {
     }
     .links ul li a {
         color: var(--clr-grey);
+    }
+    .links ul li a::before {
+        background-color: var(--clr-grey);
     }
     .bars::before,
     .bars::after {
