--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ body {
     left: 50%;
     width: 0;
     height: .5px;
-    background-color: var(--clr-white);
+    background-color: var(--clr-grey);
     transition: 350ms ease;
 }
 .links ul li a:hover::before {
